<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hyperic.thinkfast.MainMenu"
    android:background="#5B5B5B">

    <TextView
        android:text="Think Fast!"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:id="@+id/textView"
        android:textSize="34sp"
        android:fontFamily="monospace"
        android:textColor="#3292E8" />

    <Button
        android:text="@string/play"
        android:layout_marginTop="60dp"
        android:id="@+id/playButton"
        android:textColor="?attr/colorControlNormal"
        android:background="#FCD93F"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_width="160dp"
        android:layout_height="60dp" />

    <Button
        android:text="@string/how_to_txt"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:id="@+id/HowTo"
        android:background="#FCD93F"
        android:textColor="?attr/colorControlNormal"
        android:layout_below="@+id/playButton"
        android:layout_alignLeft="@+id/playButton"
        android:layout_alignStart="@+id/playButton"
        android:layout_width="160dp" />

    <Button
        android:text="@string/quit_txt"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:id="@+id/QuitBtn"
        android:layout_below="@+id/HowTo"
        android:layout_centerHorizontal="true"
        android:background="#FCD93F"
        android:textColor="?attr/colorControlNormal"
        android:layout_width="160dp" />

</RelativeLayout>
